Fix horizonal scrollbar on desktop sizes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -104,11 +104,8 @@ a.mailto:hover {
 
 .aboutContainer {
   background-color: #e9c681;
-  min-width: 100vw;
   min-height: 30vh;
-  left: 0;
-  margin: 2rem calc(100vw - 5%) 2rem calc((100% - 100vw) / 2);
-  display: flex;
+  display: relative;
 }
 
 .groupPic {
